# mpi-performance

./: .clang-format  CMakeLists.txt  README.md  bench_bcast.cpp  dvec.cpp  dvec.h  extract.sh  launch-all.sh  launch-one.sh  plot.py  run.sh  test_core.cpp
